overflow fixes

--- a/src/components/CampaignDetail/CampaignDetail.css
+++ b/src/components/CampaignDetail/CampaignDetail.css
@@ -80,7 +80,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 #tall-campaign-description {
