--- a/src/components/CategoryDetail/CategoryDetail.css
+++ b/src/components/CategoryDetail/CategoryDetail.css
@@ -40,7 +40,7 @@
     align-items: center;
     max-height: 35.5vh;
     width: 100%;
-    overflow: auto;
+    overflow-y: auto;
     padding: 0 2vw 0 2vw;
 }
 
