--- a/src/components/SubjectDetail/SubjectDetail.css
+++ b/src/components/SubjectDetail/SubjectDetail.css
@@ -98,7 +98,7 @@
     align-items: center;
     max-height: 35.5vh;
     width: 100%;
-    overflow: auto;
+    overflow-y: auto;
     padding: 0 2vw 0 2vw;
 }
 
